# swine

./: README.md  stack.yaml  swine.cabal
src/: Swine.hs
src/Swine/: Binder.hs  Core.hs  Exp.hs  List.hs  LookupList.hs  Meta.hs  Option.hs  Orphans.hs  Pair.hs  Parser.hs  Prelude.hs  Pretty.hs  Prim.hs  Repl.hs  Surface.hs
src/Swine/Core/: Parser.hs  Pretty.hs  Repl.hs
src/Swine/Exp/: Parser.hs  Pretty.hs  Repl.hs
src/Swine/Lang/: Distill.hs  Eval.hs  Exp.hs  Hoist.hs  RemoveSusp.hs  Rename.hs
src/Swine/Surface/: Exp.hs  Parser.hs  Pretty.hs  Repl.hs
