name:                swine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bitonic/swine#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           Francesco Mazzoli 2017
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  exposed-modules:
    Swine
    Swine.Pair
    Swine.Pretty
    Swine.Prelude
    Swine.LookupList
    Swine.List
    Swine.Option
    Swine.Binder
    Swine.Parser
    Swine.Prim
    Swine.Repl
    Swine.Surface
    Swine.Surface.Exp
    Swine.Surface.Pretty
    Swine.Surface.Parser
    Swine.Surface.Repl
    Swine.Lang.Exp
    Swine.Lang.Distill
    Swine.Lang.Rename
  default-language: Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    parsers,
    trifecta,
    ansi-wl-pprint,
    text,
    unordered-containers,
    template-haskell,
    charset,
    mtl,
    hashable,
    bytestring,
    filepath,
    haskeline,
    containers
  default-extensions:
    StrictData
    NoImplicitPrelude
    KindSignatures
    DataKinds
    TypeFamilies
    ExistentialQuantification
    GADTs
    LambdaCase
    ScopedTypeVariables
    PatternSynonyms
    RankNTypes
    ConstraintKinds
    StandaloneDeriving
    OverloadedStrings
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DeriveGeneric
    GeneralizedNewtypeDeriving
    EmptyCase
  ghc-options: -Wall -funbox-small-strict-fields
